Added Aug 31 - Sep 13 Chia Commits
Added Aug 31 - Sep 13 Chia Commits.

--- a/hddcoin/util/initial-config.yaml
+++ b/hddcoin/util/initial-config.yaml
@@ -83,8 +83,9 @@ harvester:
   num_threads: 30
   plots_refresh_parameter:
     interval_seconds: 120 # The interval in seconds to refresh the plot file manager
-    batch_size: 30 # How many plot files the harvester processes before it waits batch_sleep_milliseconds
-    batch_sleep_milliseconds: 10 # Milliseconds the harvester sleeps between batch processing
+    retry_invalid_seconds: 1200 # How long to wait before re-trying plots which failed to load
+    batch_size: 300 # How many plot files the harvester processes before it waits batch_sleep_milliseconds
+    batch_sleep_milliseconds: 1 # Milliseconds the harvester sleeps between batch processing
 
 
   # If True use parallel reads in chiapos
@@ -152,6 +153,7 @@ farmer:
 # Don't run this unless you want to run VDF clients on the local machine.
 timelord_launcher:
   # The server where the VDF clients will connect to.
+  host: *self_hostname
   port: 28000
   # Number of VDF client processes to keep alive in the local machine.
   process_count: 3
@@ -259,6 +261,10 @@ full_node:
   # analyze with hddcoin/utils/profiler.py
   enable_profiler: False
 
+  # this is a debug and profiling facility that logs all SQLite commands to a
+  # separate log file (under logging/sql.log).
+  log_sqlite_cmds: False
+
   # List of trusted DNS seeders to bootstrap from.
   # If you modify this, please change the hardcode as well from FullNode.set_server()
   dns_servers:
@@ -354,7 +360,7 @@ wallet:
   recent_peer_threshold: 6000
 
   introducer_peer:
-    host: introducer.hddcoin.org # HDDcoin AWS introducer IPv4/IPv6
+    host: introducer.hddcoin.org # HDDcoin introducer IPv4/IPv6
     port: 28444
 
   ssl:
