--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -112,8 +112,8 @@ jobs:
     - name: Get latest madmax plotter
       run: |
         mkdir "$env:GITHUB_WORKSPACE\madmax"
-        Invoke-WebRequest https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${{ steps.latest-madmax.outputs.result }}/chia_plot-${{ steps.latest-madmax.outputs.result }}.exe -OutFile "$env:GITHUB_WORKSPACE\madmax\chia_plot.exe"
-        Invoke-WebRequest https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${{ steps.latest-madmax.outputs.result }}/chia_plot_k34-${{ steps.latest-madmax.outputs.result }}.exe -OutFile "$env:GITHUB_WORKSPACE\madmax\chia_plot_k34.exe"
+        Invoke-WebRequest https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${{ steps.latest-madmax.outputs.result }}/chia_plot-${{ steps.latest-madmax.outputs.result }}.exe -OutFile "$env:GITHUB_WORKSPACE\madmax\hddcoin_plot.exe"
+        Invoke-WebRequest https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${{ steps.latest-madmax.outputs.result }}/chia_plot_k34-${{ steps.latest-madmax.outputs.result }}.exe -OutFile "$env:GITHUB_WORKSPACE\madmax\hddcoin_plot_k34.exe"
 
       # Get the most recent release from bladebit
     - uses: actions/github-script@v4
@@ -156,63 +156,12 @@ jobs:
         name: Windows-Installers
         path: ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\
 
-
-    - name: Install AWS CLI
-      if: steps.check_secrets.outputs.HAS_AWS_SECRET
-      run: |
-          msiexec.exe /i https://awscli.amazonaws.com/AWSCLIV2.msi
-
-    - name: Configure AWS Credentials
-      if: steps.check_secrets.outputs.HAS_AWS_SECRET
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-        aws-secret-access-key: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-        aws-region: us-west-2
-
-    - name: Upload to s3
-      if: steps.check_secrets.outputs.HAS_AWS_SECRET
-      env:
-        HDDCOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}
-      run: |
-        ls ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\
-        aws s3 cp ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe s3://download-hddcoin-net/builds/
-
     - name: Create Checksums
       env:
         HDDCOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}
       run: |
          certutil.exe -hashfile ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe SHA256 > ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe.sha256
          ls ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\
-
-    - name: Install py3createtorrent
-      if: startsWith(github.ref, 'refs/tags/')
-      run: |
-        pip3 install py3createtorrent
-
-    - name: Create torrent
-      if: startsWith(github.ref, 'refs/tags/')
-      run: |
-        py3createtorrent -f -t udp://tracker.opentrackr.org:1337/announce ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe -o ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe.torrent --webseed https://download-hddcoin-net.s3.us-west-2.amazonaws.com/install/HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe
-        ls
-
-    - name: Upload Beta Installer
-      if: steps.check_secrets.outputs.HAS_AWS_SECRET && github.ref == 'refs/heads/main'
-      env:
-        HDDCOIN_INSTALLER_VERSION: ${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}
-      run: |
-        aws s3 cp ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe s3://download-hddcoin-net/beta/HDDcoinSetup-latest-beta.exe
-        aws s3 cp ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe.sha256 s3://download-hddcoin-net/beta/HDDcoinSetup-latest-beta.exe.sha256
-
-    - name: Upload Release Files
-      if: steps.check_secrets.outputs.HAS_AWS_SECRET && startsWith(github.ref, 'refs/tags/')
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.INSTALLER_UPLOAD_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.INSTALLER_UPLOAD_SECRET }}
-      run: |
-        aws s3 cp ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe s3://download-hddcoin-net/install/
-        aws s3 cp ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe.sha256 s3://download-hddcoin-net/install/
-        aws s3 cp ${{ github.workspace }}\hddcoin-blockchain-gui\release-builds\windows-installer\HDDcoinSetup-${{ steps.version_number.outputs.HDDCOIN_INSTALLER_VERSION }}.exe.torrent s3://download-hddcoin-net/torrents/
 
     - name: Get tag name
       if: startsWith(github.ref, 'refs/tags/')
