--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,10 +57,10 @@ steps:
       MADMAX_VERSION=$(curl --silent "https://api.github.com/repos/Chia-Network/chia-plotter-madmax/releases/latest" | jq -r '.tag_name')
 
       mkdir "$(System.DefaultWorkingDirectory)/madmax"
-      wget -O "$(System.DefaultWorkingDirectory)/madmax/chia_plot" https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${MADMAX_VERSION}/chia_plot-${MADMAX_VERSION}-macos-intel
-      wget -O "$(System.DefaultWorkingDirectory)/madmax/chia_plot_k34" https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${MADMAX_VERSION}/chia_plot_k34-${MADMAX_VERSION}-macos-intel
-      chmod +x "$(System.DefaultWorkingDirectory)/madmax/chia_plot"
-      chmod +x "$(System.DefaultWorkingDirectory)/madmax/chia_plot_k34"
+      wget -O "$(System.DefaultWorkingDirectory)/madmax/hddcoin_plot" https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${MADMAX_VERSION}/chia_plot-${MADMAX_VERSION}-macos-intel
+      wget -O "$(System.DefaultWorkingDirectory)/madmax/hddcoin_plot_k34" https://github.com/Chia-Network/chia-plotter-madmax/releases/download/${MADMAX_VERSION}/chia_plot_k34-${MADMAX_VERSION}-macos-intel
+      chmod +x "$(System.DefaultWorkingDirectory)/madmax/hddcoin_plot"
+      chmod +x "$(System.DefaultWorkingDirectory)/madmax/hddcoin_plot_k34"
     displayName: "Get latest madmax release"
 
   - script: |
