--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -29,6 +29,10 @@ jobs:
         fetch-depth: 0
         submodules: recursive
 
+    - name: Set git urls to https instead of ssh
+      run: |
+        git config --global url."https://github.com/".insteadOf ssh://git@github.com/
+
     - name: Get npm cache directory
       id: npm-cache
       run: |
