--- a/hddcoin-blockchain-gui/package.json
+++ b/hddcoin-blockchain-gui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hddcoin-blockchain",
-    "author": "HDDcoin Network <hello@hddcoin.org> (https://hddcoin.org/)",
+    "author": "HDDcoin Network <contact@hddcoin.org> (https://hddcoin.org/)",
     "description": "GUI for HDDcoin Blockchain",
     "productName": "HDDcoin Blockchain",
     "private": true,
@@ -123,7 +123,7 @@
         "cross-env": "^7.0.3",
         "css-loader": "^6.3.0",
         "electron": "^14.0.1",
-        "electron-osx-sign": "github:electron/electron-osx-sign#master",
+        "electron-osx-sign": "^0.6.0",
         "electron-winstaller": "^5.0.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
