--- a/.github/workflows/build-windows-installer.yml
+++ b/.github/workflows/build-windows-installer.yml
@@ -10,6 +10,8 @@ on:
     branches:
       - '**'
 
+  workflow_dispatch:
+
 jobs:
   build:
     name: Windows Installer on Windows 10 and Python 3.9
