--- a/.github/workflows/build-linux-installer-deb.yml
+++ b/.github/workflows/build-linux-installer-deb.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - dev
     tags:
         - '**'
   pull_request:
@@ -172,7 +173,7 @@ jobs:
       run: |
          ls ${{ github.workspace }}/build_scripts/final_installer/
          sha256sum ${{ github.workspace }}/build_scripts/final_installer/hddcoin-blockchain_${HDDCOIN_INSTALLER_VERSION}_amd64.deb > ${{ github.workspace }}/build_scripts/final_installer/hddcoin-blockchain_${HDDCOIN_INSTALLER_VERSION}_amd64.deb.sha256
-         ls ${{ github.workspace }}/build_scripts/final_installer/ 
+         ls ${{ github.workspace }}/build_scripts/final_installer/
 
     - name: Get tag name
       if: startsWith(github.ref, 'refs/tags/')
