--- a/.github/workflows/build-linux-installer-rpm.yml
+++ b/.github/workflows/build-linux-installer-rpm.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - dev
     tags:
         - '**'
   pull_request:
@@ -122,7 +123,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Linux-Installers
-        path: ${{ github.workspace }}/build_scripts/final_installer/   
+        path: ${{ github.workspace }}/build_scripts/final_installer/
 
     - name: Create Checksums
       if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
@@ -132,7 +133,7 @@ jobs:
          ls $GITHUB_WORKSPACE/build_scripts/final_installer/
          sha256sum $GITHUB_WORKSPACE/build_scripts/final_installer/hddcoin-blockchain-${HDDCOIN_INSTALLER_VERSION}-1.x86_64.rpm > $GITHUB_WORKSPACE/build_scripts/final_installer/hddcoin-blockchain-${HDDCOIN_INSTALLER_VERSION}-1.x86_64.rpm.sha256
          ls $GITHUB_WORKSPACE/build_scripts/final_installer/
-  
+
     - name: Get tag name
       if: startsWith(github.ref, 'refs/tags/')
       id: tag-name
