--- a/.github/workflows/build-macos-installer.yml
+++ b/.github/workflows/build-macos-installer.yml
@@ -1,6 +1,7 @@
 name: MacOS installer on Catalina and Python 3.8
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -118,10 +119,10 @@ jobs:
       run: |
         sh install.sh
 
-    - name: Setup Node 14.x
+    - name: Setup Node 16.x
       uses: actions/setup-node@v2.5.0
       with:
-        node-version: '14.x'
+        node-version: '16.x'
 
     - name: Build MacOS DMG in Catalina
       env:
